# MW_Satellite_LF

./: .coverage  CITATION.cff  README.md  compute_satellites.py  pyproject.toml  requirements.txt  script_compute_satellites.py  setup.py  universal_settings.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test_package.yml
Input_Data/: All_satellites.csv  Surveys.csv
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/man/: mwsatellitelf.1
mwsatslf/: cosmology.py  geometry.py  io.py  luminosity.py  survey.py  tools.py
tests/: __init__.py  test_compute_satellites.py  test_cosmology.py  test_geometry.py  test_tools.py
